# rexplain

./: .gitignore  404.html  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yml
api/: index.html
api/core/: index.html
examples/: index.html
src/rexplain/: __init__.py
src/rexplain/cli/: main.py
src/rexplain/core/: explainer.py  generator.py  parser.py  tester.py
tests/: test_parser.py  test_tester.py
