[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rexplain"
dynamic = ["version"]
description = "Explain, test, and generate examples for regular expressions"
authors = [{name = "Dev Makwana", email = "devmakwana7704@gmail.com"}]
author = "Dev Makwana"
author-email = "devmakwana7704@gmail.com"
license = {text = "MIT"}
readme = "README.md"
urls = {
    "Homepage": "https://www.github.com/devbm7/rexplain"
}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
rexplain = "rexplain.cli.main:main"

[tool.hatch.version]
path = "src/rexplain/__init__.py" 